<resources>
    <string name="app_name">에브리타임</string>
    <string name="logo_text1">대학 생활을 더 편하고 즐겁게</string>
    <string name="logo_text2">에브리타임</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">와브리타임 로그인</string>
    <string name="signup">회원가입</string>
    <string name="name">이름</string>
    <string name="check">중복확인</string>
    <string name="email">이메일</string>
    <string name="nickname">닉네임</string>
    <string name="choose_univ">학교 선택</string>
    <string name="year">입학년도</string>
    <string name="univ">학교</string>
    <string name="search_univ">학교 이름을 검색하세요.</string>
    <string name="next">다음</string>
    <string name="account">계정</string>
    <string name="univ_certify">학교 인증</string>
    <string name="change_pw">비밀번호 변경</string>
    <string name="change_email">이메일 변경</string>
    <string name="community">커뮤니티</string>
    <string name="change_nick">닉네임 설정</string>
    <string name="change_image">프로필 이미지 변경</string>
    <string name="set_dm">쪽지 설정</string>
    <string name="set_notification">알림 설정</string>
    <string name="logout">로그아웃</string>
    <string name="my_profile">내 정보</string>
    <string name="delete_account">회원 탈퇴</string>
    <string name="new_password">새 비밀번호</string>
    <string name="password_hint">영문, 숫자, 특문이 2종류 이상 조합된 8~20자</string>
    <string name="new_pw_confirm">새 비밀번호 확인</string>
    <string name="cur_pw">현재 비밀번호</string>
    <string name="logout_warning">※변경 시 자동 로그아웃됩니다.</string>
    <string name="withdrawal_warning">※탈퇴 후에는 되돌릴 수 없습니다.</string>
    <string name="send_code">인증코드 발송</string>
    <string name="enter_code">인증코드 입력</string>
    <string name="enter_4">4자리 코드를 입력하세요.</string>
    <string name="delete_image">프로필 이미지 삭제</string>
    <string name="set_image">이미지 등록</string>
    <string name="color_my_comment">#259BA5</string>
    <string name="image_description">설명을 추가할 수 있어요.</string>
    <string name="string_lost">아이디/비밀번호 찾기</string>
    <string name="lecture_review">강의평가</string>
    <string name="grade">학년</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
</resources>